# deep-research

./: Readme.md  pyproject.toml
deep-research/: deep_research.py  email_agent.py
