[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.8.0",
    "openai>=2.24.0",
    "openai-agents>=0.10.2",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
]
